@@ -58,7 +58,11 @@ OTHER_FILES += \
     units/tanks/tests/Tank_tst1_hull.qml \
     units/tanks/tests/Tank_tst1.qml \
     gui/HudZoomButton.qml \
-    gui/PauseInfoBox.qml
+    gui/SimpleInfoBox.qml
+
+
+
+
 
 
 
