@@ -1,13 +1,17 @@
 import QtQuick 1.1
 
 Rectangle {
+    property string header: "Header"
+    property string text: "Some description"
+
+    id: root
     width: 255
     height: 42
     color: "#bb333232"
     radius: 10
 
     Text {
-        text: "Pause activated"
+        text: header
         color: "#d6d6a1"
         font.bold: true
         verticalAlignment: Text.AlignVCenter
@@ -18,7 +22,7 @@ Rectangle {
         anchors.horizontalCenter: parent.horizontalCenter
 
         Text {
-            text: "This is active pause. You can still give orders."
+            text: root.text
             color: "#ffffff"
             verticalAlignment: Text.AlignVCenter
             horizontalAlignment: Text.AlignHCenter
